Time: 2 ms (83.32%), Space: 44.1 MB (97.05%) - LeetHub